k8s/online-boutique-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopstack
  namespace: shopstack
spec:
  ingressClassName: nginx
  rules:
    - host: shopstack.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
